--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "-": "^0.0.1",
     "@hypernym/nuxt-gsap": "^2.4.2",
+    "@ivanv/vue-collapse-transition": "^1.0.2",
     "@nuxtjs/google-fonts": "^3.1.3",
+    "@pinia/nuxt": "^0.5.1",
     "@studio-freight/lenis": "^1.0.39",
     "@vee-validate/i18n": "^4.12.5",
     "@vee-validate/nuxt": "^4.12.5",
@@ -28,14 +30,17 @@
     "normalize.css": "^8.0.1",
     "nuxt": "^3.10.3",
     "nuxt-swiper": "^1.2.2",
+    "pinia": "^2.1.7",
+    "swiper": "^11.0.7",
     "vee-validate": "^4.12.5",
     "vue": "^3.4.19",
     "vue-imask": "^7.5.0",
     "vue-router": "^4.3.0",
+    "vuex": "^4.1.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@nuxt/image": "^1.3.0",
+    "@nuxt/image": "^1.4.0",
     "nuxt-headlessui": "^1.1.5",
     "sass": "^1.71.1"
   }
