--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
 
@@ -25,7 +25,7 @@ jobs:
         run: npm run build
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3 # Обновлено на v3
         with:
           name: nuxt-dist
           path: .output # Убедитесь, что папка соответствует выходной директории Nuxt
@@ -36,7 +36,7 @@ jobs:
 
     steps:
       - name: Download artifacts
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3 # Обновлено на v3
         with:
           name: nuxt-dist
 
@@ -57,6 +57,5 @@ jobs:
           ssh -i /tmp/deploy_key $USER@$HOST << 'EOF'
             cd /var/www/stebnev-studio.ru/html
             npm ci
-            pm2 restart nuxt-app || pm2 start npm --name nuxt-app -- start 
-
+            pm2 restart nuxt-app || pm2 start npm --name nuxt-app -- start
           EOF
