--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,8 @@ on:
       - main # Запускать на пуш в ветку main
 
 jobs:
-  build-deploy:
+  build:
+    name: Build Nuxt App
     runs-on: ubuntu-latest
 
     steps:
@@ -24,7 +25,6 @@ jobs:
       - name: Build Nuxt App
         run: npm run build
 
-      # Проверка наличия файлов в папке .output
       - name: List output files
         run: ls -la .output
 
@@ -32,34 +32,33 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: nuxt-dist
-          path: .output # Убедитесь, что папка соответствует выходной директории Nuxt
+          path: |
+            .output/**
+            package.json
+            package-lock.json
+            ecosystem.config.cjs
+          if-no-files-found: error
 
   deploy:
+    name: Deploy to VPS
     runs-on: ubuntu-latest
-    needs: build-deploy
+    needs: build
 
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v3
         with:
           name: nuxt-dist
+          path: ./nuxt-dist
 
       - name: Deploy to VPS
         env:
           HOST: ${{ secrets.VPS_HOST }}
           USER: ${{ secrets.VPS_USER }}
           KEY: ${{ secrets.VPS_SSH_KEY }}
-
         run: |
           echo "${KEY}" > /tmp/deploy_key
           chmod 600 /tmp/deploy_key
 
           # Копируем файлы сборки на сервер
-          rsync -avz -e "ssh -i /tmp/deploy_key" .output/ $USER@$HOST:/var/www/stebnev-studio.ru/html
-
-          # Выполняем команды на сервере для установки зависимостей и перезапуска PM2
-          ssh -i /tmp/deploy_key $USER@$HOST << 'EOF'
-            cd /var/www/stebnev-studio.ru/html
-            npm ci
-            pm2 restart nuxt-app || pm2 start npm --name nuxt-app -- start
-          EOF
+          rsync -avz -e "ssh -i /tmp/deploy_key" ./nuxt-dist/ $USER@$HOST:/var/www/stebnev-
