--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,19 +57,29 @@ jobs:
           USER: ${{ secrets.VPS_USER }}
           SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
         run: |
-          # Создаём временный файл с приватным ключом
-          printf "%b" "$SSH_KEY" > /tmp/deploy_key
-          chmod 600 /tmp/deploy_key
+          # Создаём папку .ssh и задаём права
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+
+          # Добавляем ключ в файл, сохраняя форматирование
+          echo "$SSH_KEY" > ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/deploy_key
+
+          # Добавляем хост в known_hosts, чтобы избежать подтверждения
+          ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts
+
+          # Тестируем SSH-подключение
+          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no $USER@$HOST "echo 'SSH connection successful'"
 
           # Копируем файлы сборки на сервер
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no -i /tmp/deploy_key" ./nuxt-dist/ $USER@$HOST:/var/www/stebnev-studio.ru/html/
+          rsync -avz -e "ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no" ./nuxt-dist/ $USER@$HOST:/var/www/stebnev-studio.ru/html/
 
           # Выполняем команды на сервере
-          ssh -o StrictHostKeyChecking=no -i /tmp/deploy_key $USER@$HOST << 'EOF'
+          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no $USER@$HOST << 'EOF'
             cd /var/www/stebnev-studio.ru/html
             npm ci --production
             pm2 reload ecosystem.config.cjs --env production
           EOF
 
-          # Удаляем временный ключ
-          rm -f /tmp/deploy_key
+          # Удаляем приватный ключ
+          rm -f ~/.ssh/deploy_key
