--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,15 @@ jobs:
         with:
           node-version: "lts/*"
 
+      - name: Cache npm cache
+        uses: actions/cache@v3
+        id: npm-cache
+        with:
+          path: ~/.npm
+          key: npm-cache-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            npm-cache-${{ runner.os }}-
+
       - name: Install dependencies
         run: npm ci
 
@@ -55,20 +64,28 @@ jobs:
         env:
           HOST: ${{ secrets.VPS_HOST }}
           USER: ${{ secrets.VPS_USER }}
-          KEY: ${{ secrets.VPS_SSH_KEY }}
+          SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
         run: |
-          echo "${KEY}" > /tmp/deploy_key
-          chmod 600 /tmp/deploy_key
+          # Создаем директорию .ssh и устанавливаем права
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+
+          # Добавляем приватный ключ в файл, сохраняя форматирование
+          echo "$SSH_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+          # Добавляем хост в known_hosts
+          ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts
 
           # Копируем файлы сборки на сервер
-          rsync -avz -e "ssh -i /tmp/deploy_key" ./nuxt-dist/ $USER@$HOST:/var/www/stebnev-studio.ru/html/
-
-          # Удаляем временный ключ
-          rm -f /tmp/deploy_key
+          rsync -avz -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" ./nuxt-dist/ $USER@$HOST:/var/www/stebnev-studio.ru/html/
 
           # Выполняем команды на сервере для установки зависимостей и перезапуска PM2
-          ssh -i /tmp/deploy_key $USER@$HOST << 'EOF'
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $USER@$HOST << 'EOF'
             cd /var/www/stebnev-studio.ru/html
             npm ci --production
-            pm2 reload ecosystem.config.cjs --env production
+            pm2 reload ecosystem.config.cjs --env production || pm2 start ecosystem.config.cjs --env production
           EOF
+
+          # Удаляем приватный ключ из runner
+          rm -f ~/.ssh/id_rsa
