--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "lts/*"
+          node-version: "18.x"
 
       - name: Cache npm cache
         uses: actions/cache@v3
@@ -77,14 +77,14 @@ jobs:
           # Добавляем хост в known_hosts
           ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts
 
-          # Копируем файлы сборки на сервер
-          rsync -avz -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" ./nuxt-dist/ $USER@$HOST:/var/www/stebnev-studio.ru/html/
+          # Копируем файлы сборки на сервер, удаляя старые файлы
+          rsync -avz --delete -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" ./nuxt-dist/ $USER@$HOST:/var/www/stebnev-studio.ru/html/
 
           # Выполняем команды на сервере
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $USER@$HOST << 'EOF'
             # Установка Node.js LTS (если необходимо)
             NODE_VERSION=$(node -v || echo "v0.0.0")
-            REQUIRED_NODE_VERSION="v16.0.0"
+            REQUIRED_NODE_VERSION="v18.0.0"
             if [ "$(printf '%s\n' "$REQUIRED_NODE_VERSION" "$NODE_VERSION" | sort -V | head -n1)" != "$REQUIRED_NODE_VERSION" ]; then
               curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
               sudo apt-get install -y nodejs
@@ -99,7 +99,7 @@ jobs:
             npm ci --production
 
             # Перезапуск приложения через PM2
-            pm2 restart all || pm2 start ecosystem.config.cjs --env production
+            pm2 reload ecosystem.config.cjs --env production || pm2 start ecosystem.config.cjs --env production
           EOF
 
           # Удаляем приватный ключ из runner
