--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,11 +95,10 @@ jobs:
               sudo npm install -g pm2
             fi
 
-            cd /var/www/stebnev-studio.ru/html
             git pull
-            npm install
-            npx nuxi cleanup
-            npm run build
+
+            cd /var/www/stebnev-studio.ru/html
+            npm ci --production
 
             # Перезапуск приложения через PM2
             pm2 restart all || pm2 start ecosystem.config.cjs --env production
