--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,13 +95,11 @@ jobs:
               sudo npm install -g pm2
             fi
 
-            git pull
-
             cd /var/www/stebnev-studio.ru/html
             npm ci --production
 
             # Перезапуск приложения через PM2
-            pm2 restart all || pm2 start ecosystem.config.cjs --env production
+            pm2 restart ecosystem.config.cjs --env production || pm2 start ecosystem.config.cjs --env production
           EOF
 
           # Удаляем приватный ключ из runner
