--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,7 +118,11 @@ jobs:
 
             # Установить зависимости
             echo "Установка зависимостей..."
-            npm ci --production
+            npm install
+
+            # Собрать приложение
+            echo "Сборка приложения..."
+            npm run build
 
             # Перезапустить приложение через PM2
             echo "Перезапуск приложения через PM2..."
