--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Nuxt 3 App
 on:
   push:
     branches:
-      - main # Trigger the workflow on push to the main branch
+      - main # Запускать на пуш в ветку main
 
 jobs:
   build:
@@ -11,17 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
+      # Шаг 1: Checkout кода
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Setup Node.js environment
+      # Шаг 2: Настройка Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18.x" # Ensure compatibility with Nuxt 3
+          node-version: "18.x" # Убедитесь, что версия соответствует требованиям Nuxt 3
 
-      # Step 3: Cache npm dependencies to speed up builds
+      # Шаг 3: Кэширование npm зависимостей
       - name: Cache npm dependencies
         uses: actions/cache@v3
         with:
@@ -30,130 +30,135 @@ jobs:
           restore-keys: |
             npm-cache-${{ runner.os }}-
 
-      # Step 4: Install dependencies using npm ci for a clean install
+      # Шаг 4: Установка зависимостей
       - name: Install dependencies
         run: npm ci
 
-      # Step 5: Build the Nuxt application
+      # Шаг 5: Проверка содержимого директории после установки зависимостей
+      - name: List directories after install
+        run: ls -la
+
+      # Шаг 6: Сборка Nuxt приложения
       - name: Build Nuxt App
         run: npm run build
 
-      # Step 6: Verify the build output
+      # Шаг 7: Проверка результатов сборки
+      # Добавлены дополнительные команды для отладки
       - name: Verify build output
         run: |
-          echo "Listing root directory contents:"
+          echo "Содержимое корневой директории после сборки:"
           ls -la
-          echo "Checking for .output directory:"
+          echo "Проверка наличия .output директории:"
           if [ -d ".output" ]; then
             echo ".output directory exists."
             ls -la .output
           else
-            echo ".output directory NOT found. Checking for dist directory:"
-            ls -la dist || echo "Neither .output nor dist directories found."
-            exit 1 # Exit if neither directory exists
+            echo ".output directory NOT found. Проверка наличия папки dist:"
+            ls -la dist || echo "Ни .output, ни dist директории не найдены."
+            exit 1 # Прерываем выполнение, если ни одна из директорий не найдена
           fi
 
-      # Step 7: Upload build artifacts for deployment
+      # Шаг 8: Загрузка артефактов для деплоя
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: nuxt-dist
           path: |
-            .output/**          # For server builds
-            dist/**             # For static builds
+            .output/**          # Для серверных сборок
+            dist/**             # Для статических сборок
             package.json
             package-lock.json
             ecosystem.config.cjs
-          if-no-files-found: error # Fail the build if artifacts are missing
+          if-no-files-found: error # Прерываем сборку, если артефакты не найдены
 
   deploy:
     name: Deploy to VPS
     runs-on: ubuntu-latest
-    needs: build # Ensure the deploy job runs after a successful build
+    needs: build # Деплой выполняется после успешной сборки
 
     steps:
-      # Step 1: Download the build artifacts
+      # Шаг 1: Загрузка артефактов
       - name: Download artifacts
         uses: actions/download-artifact@v3
         with:
           name: nuxt-dist
           path: ./nuxt-dist
 
-      # Step 2: Verify the downloaded artifacts
+      # Шаг 2: Проверка загруженных артефактов
       - name: Verify artifacts
         run: |
-          echo "Listing downloaded artifacts:"
+          echo "Содержимое папки с артефактами:"
           ls -la ./nuxt-dist
 
-      # Step 3: Deploy to the VPS using SSH and rsync
+      # Шаг 3: Деплой на VPS
       - name: Deploy to VPS
         env:
-          HOST: ${{ secrets.VPS_HOST }} # VPS hostname or IP
-          USER: ${{ secrets.VPS_USER }} # VPS SSH user
-          SSH_KEY: ${{ secrets.VPS_SSH_KEY }} # VPS SSH private key
+          HOST: ${{ secrets.VPS_HOST }} # Хост VPS
+          USER: ${{ secrets.VPS_USER }} # Пользователь VPS
+          SSH_KEY: ${{ secrets.VPS_SSH_KEY }} # Приватный SSH ключ
         run: |
-          set -e # Exit immediately if a command exits with a non-zero status
+          set -e # Прерывать выполнение при ошибке
 
-          # Configure SSH
+          # Настройка SSH
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
           echo "$SSH_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts
 
-          # Synchronize build artifacts to the VPS
+          # Синхронизация артефактов на сервер
           rsync -avz --delete -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" ./nuxt-dist/ $USER@$HOST:/var/www/stebnev-studio.ru/html/
 
-          # Execute deployment commands on the VPS
+          # Выполнение команд деплоя на сервере
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $USER@$HOST << 'EOF'
             set -e
 
-            echo "Verifying Node.js installation..."
+            echo "Проверка установленной версии Node.js..."
             NODE_VERSION=$(node -v || echo "v0.0.0")
-            echo "Current Node.js version: $NODE_VERSION"
+            echo "Текущая версия Node.js: $NODE_VERSION"
 
             REQUIRED_NODE_VERSION="v18.0.0"
 
-            # Function to compare versions
+            # Функция для сравнения версий
             version_gt() { test "$(echo "$@" | tr " " "\n" | sort -V | head -n1)" != "$1"; }
 
             if version_gt "$REQUIRED_NODE_VERSION" "$NODE_VERSION"; then
-              echo "Installing Node.js $REQUIRED_NODE_VERSION..."
+              echo "Установка Node.js $REQUIRED_NODE_VERSION..."
               curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
               sudo apt-get install -y nodejs
             else
-              echo "Node.js version meets the requirement."
+              echo "Версия Node.js соответствует требованиям."
             fi
 
-            echo "Installed Node.js version: $(node -v)"
-            echo "Installed npm version: $(npm -v)"
+            echo "Установленная версия Node.js: $(node -v)"
+            echo "Установленная версия npm: $(npm -v)"
 
-            # Install PM2 globally if not already installed
+            # Установка PM2 (если не установлен)
             if ! command -v pm2 > /dev/null 2>&1; then
-              echo "Installing PM2..."
+              echo "Установка PM2..."
               sudo npm install -g pm2
             else
-              echo "PM2 is already installed."
+              echo "PM2 уже установлен."
             fi
 
-            # Navigate to the application directory
+            # Перейти в директорию приложения
             cd /var/www/stebnev-studio.ru/html
 
-            # Install production dependencies
-            echo "Installing production dependencies..."
+            # Установка зависимостей (production)
+            echo "Установка зависимостей..."
             npm ci --production
 
-            # Restart the application using PM2
-            echo "Restarting the application with PM2..."
+            # Перезапуск приложения через PM2
+            echo "Перезапуск приложения через PM2..."
             pm2 reload ecosystem.config.cjs --env production || pm2 start ecosystem.config.cjs --env production
 
-            # Save the PM2 process list
+            # Сохранение процессов PM2
             pm2 save
 
-            # Display the PM2 process status
+            # Вывод статуса PM2
             pm2 status
           EOF
 
-          # Clean up SSH keys from the runner
+          # Удаление приватного ключа из runner
           rm -f ~/.ssh/id_rsa
         shell: bash
