--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,8 +70,8 @@ jobs:
         with:
           name: nuxt-dist
           path: |
-            .output/**/*      # Для серверных сборок (двойные звездочки для всех поддиректорий и файлов)
-            dist/**/*          # Для статических сборок
+            ./.output/**/*
+            ./dist/**/*
             package.json
             package-lock.json
             ecosystem.config.cjs
