--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,9 @@
 name: Deploy Nuxt 3 App
 
 on:
+  push:
+    branches:
+      - main # или любая другая ветка
   workflow_dispatch:
 
 jobs:
@@ -28,31 +31,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: List directories after install
-        run: ls -la
-
-      - name: Check nuxi version
-        run: npx nuxi --version
-
-      - name: List available scripts
-        run: npm run
-
       - name: Build Nuxt App
         run: npx nuxi build
-
-      - name: Verify build output
-        run: |
-          echo "Содержимое корневой директории после сборки:"
-          ls -la
-          echo "Проверка наличия .output директории:"
-          if [ -d ".output" ]; then
-            echo ".output directory exists."
-            ls -la .output
-          else
-            echo ".output directory NOT found. Проверка наличия папки dist:"
-            ls -la dist || echo "Ни .output, ни dist директории не найдены."
-            exit 1
-          fi
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -62,7 +42,6 @@ jobs:
             package.json
             package-lock.json
             ecosystem.config.cjs
-            dist  
             .output
           if-no-files-found: error
 
@@ -94,16 +73,18 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts
 
-      - name: Deploy to VPS
+      - name: Deploy via rsync
         env:
           HOST: ${{ secrets.VPS_HOST }}
           USER: ${{ secrets.VPS_USER }}
         run: |
+          # Копируем содержимое ./nuxt-dist/ в /var/www/stebnev-studio.ru/html
+          rsync -avz -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" --delete ./nuxt-dist/ $USER@$HOST:/var/www/stebnev-studio.ru/html/
+
+          # После копирования перезапускаем pm2
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $USER@$HOST << 'EOF'
             set -e
             cd /var/www/stebnev-studio.ru/html
-            git pull
-            npm run build
             pm2 restart ecosystem.config.cjs --env production || pm2 start ecosystem.config.cjs --env production
             pm2 save
           EOF
