--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
-    "@hypernym/nuxt-gsap": "^2.4.2",
+    "gsap": "^3.12.5",
+    "lenis": "^1.1.13",
     "@ivanv/vue-collapse-transition": "^1.0.2",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@pinia/nuxt": "^0.5.1",
-    "@studio-freight/lenis": "^1.0.39",
     "@vee-validate/i18n": "^4.12.5",
     "@vee-validate/nuxt": "^4.12.5",
     "@vee-validate/rules": "^4.12.5",
@@ -26,7 +26,6 @@
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.8.0",
-    "locomotive-scroll": "^5.0.0-beta.11",
     "maska": "^2.1.11",
     "normalize-scss": "^8.0.0",
     "normalize.css": "^8.0.1",
@@ -57,8 +56,8 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-vue": "^9.24.1",
+    "locomotive-scroll": "^4.1.4",
     "nuxt-build-cache": "^0.1.1",
-    "nuxt-delay-hydration": "^1.3.3",
     "nuxt-headlessui": "^1.1.5",
     "prettier": "^3.2.5",
     "sass": "^1.71.1",
